# go-wasm2func

./: .golangci.toml  README.md  doc.sh  fmt.sh  go.mod  wasm2func.go
cmd/example/mem/mem2mem/conv/gzip/zcat/rs-zcat/: Cargo.toml  rs_zcat.wasm  test.mjs  watch.sh
cmd/example/mem/mem2mem/conv/gzip/zcat/rs-zcat/src/: lib.rs
cmd/example/mem/mem2mem/hex2bytes/: build.sh  cov.sh  fmt.sh  lint.sh  main.go  rs_hex2bytes.wasm  sec.sh  test.sh  vet.sh  vuln.sh
cmd/example/mem/mem2mem/hex2bytes-static/: lint.sh  main.go  rs_hex2bytes_static.wasm
cmd/example/mem/mem2mem/hex2bytes-static/rs-hex2bytes-static/: Cargo.toml  fmt.sh  test.mjs  (+1 more)
cmd/example/mem/mem2mem/log/ltsv/json2ltsv/wasm/rs-json2ltsv/: Cargo.toml  check.sh  clippy.sh  rs_json2ltsv.wasm  test.mjs
cmd/example/mem/mem2mem/log/ltsv/json2ltsv/wasm/rs-json2ltsv/src/: lib.rs
cmd/example/mem/mem2scalar/mem2bits_count/: cov.sh  main.go  rs_mem2bcnt.wasm  test.sh  vet.sh
cmd/example/simple/mul/: fmt.sh  main.go  vuln.sh
cmd/example/simple/mul/wasm.d/: rs_mul.wasm
compiler/: compile.go
function/: builder.go
instance/: builder.go
instance/memory/: err.go  read.go  rw.go  write.go
instance/state/simple/: caller.go  fn.go  input.go  output.go
runtime/rt-wazero/compiler/: compile.go
runtime/rt-wazero/function/: builder.go
runtime/rt-wazero/function/binary/: f5.go
runtime/rt-wazero/function/unary/: i5.go
runtime/rt-wazero/function/unit/: i5.go
runtime/rt-wazero/instance/: builder.go
runtime/rt-wazero/instance/memory/: rw.go
util/: compose.go  select.go
util/arr/: all.go  fold.go
(+13 files in other folders)
